--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./assets/style.css" />
+    <link rel="stylesheet" href="./assets/styles/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -229,6 +229,6 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="./assets/script.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
